# ticktick-to-sqlite

./: .gitignore  README.md  pyproject.toml
tests/: test_ticktick_to_sqlite.py
ticktick_to_sqlite/: cli.py  utils.py
